Statt | den Befehl \abs verwenden
Vor allem in Indexeinträgen bereitet der senkrechte Strich | Probleme, da
er auch ein aktives Zeichen für makeindex (Xindy) ist. Auch für das
Dokument ist es besser, wenn der Befehl \abs verwendet wird, da damit
immer gesichert ist, dass es einen linken und einen rechten Strich gibt.
Außerdem kommt das einem sauberen Auszeichnung naher, da der senkrechte
Strich mehrere Bedeutungen hat, wie zum Beispiel in diesem Dokument noch
als Trennzeichen bei der Norm oder als Zeichen zur Begrenzung einer
Funktion auf ein Gebiet.

Die Änderungen wurden mit dem Befehl

% perl -Wn -e 'if (/\|/) { print STDOUT $1."\n" while (s/\|\s*((?:{[^{}]*}|\([^()]*\)|\[[^][]*\]|[^][{}()|\$])*)\s*\|/\\abs{$1}/);}' *.tex |sort -u

gemacht. Die Ausgabe waren alle Argumente von \abs, so dass man leicht
kontrollieren konnte, ob falsche Zeichenketten als Argument verwendet
wurden. Mit dem Ausdruck wurden aber nicht alle Stellen erkannt, denn der
Ausdruck funktioniert nicht mit geschachtelten Klammern. Zwei Stellen
mussten daher von Hand geändert werden.

Zur Kontrolle der verbleibenden senkrechten Striche im Dokument wurde
dieser Befehl verwendet:

% sed '/|/s/|\(see{\|_\)//g' *.tex |grep --color \|

git-svn-id: https://svn.lug-jena.de/uni-skripte@2602 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/leopold-hoehere-ana/abschnitt11.tex
+++ b/leopold-hoehere-ana/abschnitt11.tex
@@ -25,8 +25,8 @@ Das Tupel \highl[$(X,d)$|see{Raum}]{$(X,d)$} heißt dann
 \begin{bsp}
   \begin{enumerate}
   \item $\Q$, $\R$ oder $\C$ versehen mit der
-    \highl[Metrik!Betragsmetrik $d_{|\cdot|}$]{Betragsmetrik}
-    \highl[$d_{|\cdot|}$|see{Metrik}]{$d_{|\cdot|}(x,y)$}$:=|y-x|$
+    \highl[Metrik!Betragsmetrik $d_{\abs{\cdot}}$]{Betragsmetrik}
+    \highl[$d_{\abs{\cdot}}$|see{Metrik}]{$d_{\abs{\cdot}}(x,y)$}$:=\abs{y-x}$
     sind metrische Räume.
   \item Jede beliebige nichtleere Menge $X$ wird mit der
     \highl[Metrik!diskrete $d_{dis}$]{diskreten Metrik}.
@@ -40,19 +40,19 @@ Das Tupel \highl[$(X,d)$|see{Raum}]{$(X,d)$} heißt dann
     zu einem metrischen Raum.
   \item $\R$ mit der \highl[Metrik!Arcustangensmetrik
     $d_{arc}$]{Arcustangensmetrik}
-    \highl[$d_{arc}$|see{Metrik}]{$d_{arc}(x,y)$}$:=|\arctan(x)-\arctan(y)|$
+    \highl[$d_{arc}$|see{Metrik}]{$d_{arc}(x,y)$}$:=\abs{\arctan(x)-\arctan(y)}$
     ist metrischer Raum (zum Beweis siehe Übungsserie 1).
-  \item $\C$ mit $d(z,w):=|\Re(z)-\Re(w)|$ ist ein peudometrischer
+  \item $\C$ mit $d(z,w):=\abs{\Re(z)-\Re(w)}$ ist ein peudometrischer
     Raum, da $d$ hier nur Pseudometrik ist. Denn für $z:=1+i$ und
     $w:=1+2i$ gilt $d(z,w)=0$, obwohl $z \neq w$.
   \item Seien $x=(\xi_1, \ldots, \xi_n), y=(\eta_1, \ldots, \eta_n)
     \in \R^n$ oder $\C^n$. Dann definieren alle folgenden Funktionen
     Metriken auf diesen beiden Mengen:
     \begin{align*}
-      \text{\highl[Metrik!$d_1$]{$d_1(x,y)$}} & :=\sum_{k=1}^n |\xi_k - \eta_k| \\
-      \text{\highl[Metrik!euklidische Metrik $d_2$]{$d_2(x,y)$}} & :=\left( \sum_{k=1}^n |\xi_k - \eta_k|^2 \right)^{\frac{1}{2}} \\
-      \text{\highl[Metrik!Metrik des $\R^n$ $d_p$]{$d_p(x,y)$}} & :=\left( \sum_{k=1}^n |\xi_k - \eta_k|^p \right)^{\frac{1}{p}} \text{, für } 1 \leq p < \infty\\
-      \text{\highl[Metrik!Maximumsmetrik des $\R^n$ $d_\infty$]{$d_\infty(x,y)$}} & := \max_{k=1, \ldots, n} |\xi_k - \eta_k|
+      \text{\highl[Metrik!$d_1$]{$d_1(x,y)$}} & :=\sum_{k=1}^n \abs{\xi_k - \eta_k} \\
+      \text{\highl[Metrik!euklidische Metrik $d_2$]{$d_2(x,y)$}} & :=\left( \sum_{k=1}^n \abs{\xi_k - \eta_k}^2 \right)^{\frac{1}{2}} \\
+      \text{\highl[Metrik!Metrik des $\R^n$ $d_p$]{$d_p(x,y)$}} & :=\left( \sum_{k=1}^n \abs{\xi_k - \eta_k}^p \right)^{\frac{1}{p}} \text{, für } 1 \leq p < \infty\\
+      \text{\highl[Metrik!Maximumsmetrik des $\R^n$ $d_\infty$]{$d_\infty(x,y)$}} & := \max_{k=1, \ldots, n} \abs{\xi_k - \eta_k}
     \end{align*}
     Summiert man dagegen nur bis $n-1$, so werden sie zu Pseudometriken.
   \item $(\R^2, d_M)$ ist ein metrischer Raum mit
@@ -73,8 +73,8 @@ Das Tupel \highl[$(X,d)$|see{Raum}]{$(X,d)$} heißt dann
     \begin{gather*}
       \text{\highl[$d_u$|see{Metrik}]{$d_u(x,y)$}}:=
       \begin{cases}
-        |\xi_1 - \eta_1| + |\xi_2| + |\eta_2|, & \xi_1 \neq \eta_1 \\
-        |\xi_2 - \eta_2|,                      & \xi_1 = \eta_1
+        \abs{\xi_1 - \eta_1} + \abs{\xi_2} + \abs{\eta_2}, & \xi_1 \neq \eta_1 \\
+        \abs{\xi_2 - \eta_2},                      & \xi_1 = \eta_1
       \end{cases}
     \end{gather*}
     ist ebenfalls ein metrischer Raum. Die Metrik wird auch als
@@ -86,8 +86,8 @@ Das Tupel \highl[$(X,d)$|see{Raum}]{$(X,d)$} heißt dann
 Man bezeichnet die Menge aller (unendlichen) \highl[Folgenräume!Folgen $s$]{Folgen} über einem Körper $\K$ ($\R$ oder $\C$) mit \highl[$s$|see{Folgenräume}]{$s$}$:=\{ x=(\xi_k)_{k=1}^{\infty} \sep \xi_k \in \K \}$.\\
 Man definiert darüber hinaus spezielle Mengen von Folgen mit gewissen Eigenschaften (Teilmengen von $s$):
 \begin{align*}
-\text{\highl[Folgenräume!$p$-summierbare Folgen $l_p$]{$l_p$}} :=      & \{ x \in s \sep \left( \sum_{k=1}^{\infty} |\xi_k|^p \right)^{\frac{1}{p}} <\infty \} & \text{( für } 1 \leq p < \infty \text{\highl[$l_p$|see{Folgenräume}]{})} \\
-\text{\highl[Folgenräume!beschränkte Folgen $l_\infty$]{$l_\infty$}} := & \{ x \in s \sep \sup_k |\xi_k| < \infty \}                                           & \text{( Raum der \highl[$l_\infty$|see{Folgenräume}]{beschränkten Folgen})}\\
+\text{\highl[Folgenräume!$p$-summierbare Folgen $l_p$]{$l_p$}} :=      & \{ x \in s \sep \left( \sum_{k=1}^{\infty} \abs{\xi_k}^p \right)^{\frac{1}{p}} <\infty \} & \text{( für } 1 \leq p < \infty \text{\highl[$l_p$|see{Folgenräume}]{})} \\
+\text{\highl[Folgenräume!beschränkte Folgen $l_\infty$]{$l_\infty$}} := & \{ x \in s \sep \sup_k \abs{\xi_k} < \infty \}                                           & \text{( Raum der \highl[$l_\infty$|see{Folgenräume}]{beschränkten Folgen})}\\
 \text{\highl[Folgenräume!konvergente Folgen $c$]{$c$}} :=              & \{ x \in s \sep \lim_{k \nach \infty} \xi_k \text{ existiert} \}                      & \text{( Raum der \highl[$c$|see{Folgenräume}]{konvergenten Folgen})}\\
 \text{\highl[Folgenräume!Nullfolgen $c_0$]{$c_0$}} :=                  & \{ x \in s \sep \lim_{k \nach \infty} \xi_k =0 \}                                     & \text{( Raum der \highl[$c_0$|see{Folgenräume}]{Nullfolgen})}\\
 \text{\highl[Folgenräume!finite Folgen $F$]{$F$}} :=        & \{ x \in s \sep x=(\xi_1, \ldots, \xi_k, 0,\ldots) \}                                 & \text{( Raum der \highl[$F$|see{Folgenräume}]{finiten Folgen})}.
@@ -96,26 +96,26 @@ Man definiert darüber hinaus spezielle Mengen von Folgen mit gewissen Eigenschaf
 \medskip
 
 \begin{bsp}[Fortsetzung]
-(viii) $s$ bildet mit $d(x,y):= \sum_{k=1}^{\infty} \frac{1}{2^k} \frac{|\xi_k - \eta_k|}{1+|\xi_k - \eta_k|}$ einen metrischen Raum. Dabei ist wieder $x=(\xi_k)_{k=1}^{\infty}$ und $y=(\eta_k)_{k=1}^{\infty}$. Da der zweite Bruch stets $\leq 1$ ist und die Reihe über $\frac{1}{2^k}$ konvergiert ist $d$ stets endlich. Zum Beweis der Dreiecksungleichung nutze man die strenge Monotonie der Funktion $f(t)=\frac{t}{1+t}$ auf $[0,\infty)$.\\
-Die Funktionen $d^{(k)}(x,y):= | \xi_k - \eta_k |$ bilden für alle $k \in \N$ ein System von Pseudometriken (Halbnormen) auf $s$. Durch obigen Ansatz führt ein solches System stets auf eine Metrik.\\\\
-$l_p$ bildet mit der \highl[Metrik!$l_p$-Metrik $d_p$]{$l_p$-Metrik} \highl[$d_p$|see{Metrik}]{$d_p(x,y)$}$:= \left( \sum_{k=1}^{\infty} |\xi_k - \eta_k|^p \right)^{\frac{1}{p}}$ einen metrischen Raum. Zum Beweis der Gültigkeit der Metrikaxiome verwendet man vom endlich-dimensionalen Fall ausgehend einen Grenzübergang, sowie die Minkowski'sche Ungleichung für die Dreiecksungleichung.\\\\
-Aus den Mengen $l_\infty, c$ und $c_0$ erhält man einen metrischen Raum üblicherweise durch die Wahl der \highl[Metrik!sup-Metrik auf $l_\infty$ $d_\infty(x,y)$]{Supremumsmetrik}: \highl[$d_\infty$|see{Metrik}]{$d_\infty(x,y)$}$:= \sup_k |\xi_k - \eta_k |$.
+(viii) $s$ bildet mit $d(x,y):= \sum_{k=1}^{\infty} \frac{1}{2^k} \frac{\abs{\xi_k - \eta_k}}{1+\abs{\xi_k - \eta_k}}$ einen metrischen Raum. Dabei ist wieder $x=(\xi_k)_{k=1}^{\infty}$ und $y=(\eta_k)_{k=1}^{\infty}$. Da der zweite Bruch stets $\leq 1$ ist und die Reihe über $\frac{1}{2^k}$ konvergiert ist $d$ stets endlich. Zum Beweis der Dreiecksungleichung nutze man die strenge Monotonie der Funktion $f(t)=\frac{t}{1+t}$ auf $[0,\infty)$.\\
+Die Funktionen $d^{(k)}(x,y):= \abs{\xi_k - \eta_k }$ bilden für alle $k \in \N$ ein System von Pseudometriken (Halbnormen) auf $s$. Durch obigen Ansatz führt ein solches System stets auf eine Metrik.\\\\
+$l_p$ bildet mit der \highl[Metrik!$l_p$-Metrik $d_p$]{$l_p$-Metrik} \highl[$d_p$|see{Metrik}]{$d_p(x,y)$}$:= \left( \sum_{k=1}^{\infty} \abs{\xi_k - \eta_k}^p \right)^{\frac{1}{p}}$ einen metrischen Raum. Zum Beweis der Gültigkeit der Metrikaxiome verwendet man vom endlich-dimensionalen Fall ausgehend einen Grenzübergang, sowie die Minkowski'sche Ungleichung für die Dreiecksungleichung.\\\\
+Aus den Mengen $l_\infty, c$ und $c_0$ erhält man einen metrischen Raum üblicherweise durch die Wahl der \highl[Metrik!sup-Metrik auf $l_\infty$ $d_\infty(x,y)$]{Supremumsmetrik}: \highl[$d_\infty$|see{Metrik}]{$d_\infty(x,y)$}$:= \sup_k \abs{\xi_k - \eta_k }$.
 \end{bsp}
 \medskip
 
 \begin{defis}
 (i) Für ein Gebiet $M$ (in der Regel $M=[a,b]$) bezeichnet \highl[$C(M)$|see{Funktionenräume}]{$C(M)$} die Menge der \highl[Funktionenräume!stetige Funktionen über $M$ $C(M)$]{stetigen Funktionen} $f \colon M \nach \R$.\\
-(ii) Ist $X$ eine beliebige Menge, so heißt \highl[$B(X)$|see{Funktionenräume}]{$B(X)$}$:= \{ f \colon X \nach \C \sep \sup_{x \in X} |f(x)|<\infty \}$ die Menge der \highl[Funktionenräume!Beschränkte Funktionen über $X$ $B(X)$]{beschränkten Funktionen} über $X$.
+(ii) Ist $X$ eine beliebige Menge, so heißt \highl[$B(X)$|see{Funktionenräume}]{$B(X)$}$:= \{ f \colon X \nach \C \sep \sup_{x \in X} \abs{f(x)}<\infty \}$ die Menge der \highl[Funktionenräume!Beschränkte Funktionen über $X$ $B(X)$]{beschränkten Funktionen} über $X$.
 \end{defis}
 \medskip
 
 \begin{bsp}[Fortsetzung]
-(ix) \highl[Metrik!sup-Metik auf $C(M)$ $d_\infty(f,g)$)]{$d_\infty(f,g)$}$:= \sup_{x \in [a,b]} |f(x)-g(x)|$ definiert die Metrik auf $C([a,b])$.\\
-Auf $B(X)$ ist durch $d_\infty(f,g) := \sup_{x \in X} |f(x)-g(x)|$ eine Metrik gegeben. Wählt man für alle Teilmengen $Y \subset X$ die Pseudometrik $d_{\infty, Y}(f,g) := \sup_{x \in Y} |f(x)-g(x)|$, so kann man auch aus diesem, $X$ ausschöpfenden System durch obigen Trick eine Metrik auf ganz $X$ konstruieren.\\
+(ix) \highl[Metrik!sup-Metik auf $C(M)$ $d_\infty(f,g)$)]{$d_\infty(f,g)$}$:= \sup_{x \in [a,b]} \abs{f(x)-g(x)}$ definiert die Metrik auf $C([a,b])$.\\
+Auf $B(X)$ ist durch $d_\infty(f,g) := \sup_{x \in X} \abs{f(x)-g(x)}$ eine Metrik gegeben. Wählt man für alle Teilmengen $Y \subset X$ die Pseudometrik $d_{\infty, Y}(f,g) := \sup_{x \in Y} \abs{f(x)-g(x)}$, so kann man auch aus diesem, $X$ ausschöpfenden System durch obigen Trick eine Metrik auf ganz $X$ konstruieren.\\
 \\
 (x) Für $1 \leq p < \infty$ bilden auch die Funktionen
 \begin{gather*}
-\text{\highl[Metrik!Int-Metrik auf $C(M)$ $d_p(f,g)$]{$d_p(f,g)$}} := \left( \int_a^b |f(x)-g(x)|^p dx \right)^{\frac{1}{p}}
+\text{\highl[Metrik!Int-Metrik auf $C(M)$ $d_p(f,g)$]{$d_p(f,g)$}} := \left( \int_a^b \abs{f(x)-g(x)}^p dx \right)^{\frac{1}{p}}
 \end{gather*}
 Metriken auf $C([a,b])$. Dabei ist $d_p$ offensichtlich eine symmetrische Abbildung\\
 $C([a,b]) \times C([a,b]) \nach [0,\infty)$. Ist $f=g$ so folgt $d_p(f,g)=0$ unmittelbar, die Umkehrung beweist man indirekt mit dem Argument, dass die Funktion $f-g$ stetig sein muss. Für die Dreiecksungleichung nutzt man die gewöhnliche Dreiecksungleichung für Beträge und die Linearität des Integrals.
@@ -130,7 +130,7 @@ Sei $(X,d)$ ein metrischer Raum.\\
 \medskip
 
 \begin{bsp}
-(i) In $(\R, |\cdot|)$ ist $K_\epsilon(x)=(x-\epsilon, x+\epsilon)$ eine offene Kugel.\\
+(i) In $(\R, \abs{\cdot})$ ist $K_\epsilon(x)=(x-\epsilon, x+\epsilon)$ eine offene Kugel.\\
 \\
 (ii) Kreise in $(\R^2, d_2)$: $(\xi_1-\eta_1)^2+(\xi_2-\eta_2)^2<\epsilon^2$.\\
 \\
@@ -181,7 +181,7 @@ $I$ aus (iii) ist eine beliebige Indexmenge (z.B.: $\N$ oder auch $\R$), d.h. au
 \medskip
 
 \begin{bsp}
-Wähle $(\R, |\cdot|)$ als metrischen Raum. Darin sind die Mengen $O_k:=(-\frac{1}{k}, \frac{1}{k})$ für alle $k \in \N$ offen, die Menge $\{0\}$ jedoch nicht. Dennoch gilt: $\bigcap_{k=1}^{\infty} O_k = \{ 0 \}$.
+Wähle $(\R, \abs{\cdot})$ als metrischen Raum. Darin sind die Mengen $O_k:=(-\frac{1}{k}, \frac{1}{k})$ für alle $k \in \N$ offen, die Menge $\{0\}$ jedoch nicht. Dennoch gilt: $\bigcap_{k=1}^{\infty} O_k = \{ 0 \}$.
 \end{bsp}
 \medskip
 
@@ -253,7 +253,7 @@ Sei $(X,d)$ ein (pseudo-) metrischer Raum. Die Folge $(x_j)_{j=1}^{\infty} \subs
 \begin{bem}
 Offensichtlich konvergiert die Folge, wenn für alle $j\geq j_0(\epsilon)$ gilt $x_j \in K_\epsilon(x)$.\\
 Im metrischen Raum ist der Grenzwert einer konvergenten Folge stets eindeutig bestimmt. Zum Beweis wählt man $\epsilon := \frac{d(x,x')}{3}>0$, wobei $x \neq x'$ die angenommenen Grenzwerte bezeichnen. Ab der Stelle $j_0$ liegen dann alle $x_j$ in $K_\epsilon(x)$ und ab $j_1$ alle in $K_\epsilon(x')$, nach der Wahl des $\epsilon$ gilt jedoch $K_\epsilon(x) \cap K_\epsilon(x') = \leer$ (Widerspruch).\\
-Für pseudometrische Räume ist das nicht mehr richtig. Beispielsweile konvergiert in $\C$ mit $d(z,w):=|\Re(z)-\Re(w)|$ die Folge $z_j=\frac{1}{j}$ gegen jedes $z=0+yi$ für $y\in \R$.
+Für pseudometrische Räume ist das nicht mehr richtig. Beispielsweile konvergiert in $\C$ mit $d(z,w):=\abs{\Re(z)-\Re(w)}$ die Folge $z_j=\frac{1}{j}$ gegen jedes $z=0+yi$ für $y\in \R$.
 \end{bem}
 \medskip
 
@@ -287,35 +287,35 @@ Ein (pseudo-) metrischer Raum $(X,d)$ heißt \highl[vollständig!metrischer Raum]{
 \medskip
 
 \begin{bsp}
-(i) Die Räume $(\R,|\cdot|)$ und $(\C,|\cdot|)$ sind vollständig.\\
+(i) Die Räume $(\R,\abs{\cdot})$ und $(\C,\abs{\cdot})$ sind vollständig.\\
 \\
 (ii) $(\R^n,d_p)$ und $(\C^n,d_p)$ sind vollständig, denn $d_p(x_j,x) \nach 0$ \gdw für alle $k=1,\ldots,n$ gilt $\xi_k^{(j)} \nach \xi_k$ in $\R$ (bzw. $\C$).\\
 \\
 (iii) Die Räume $(l_p,d_p)$ sind vollständig für $1 \leq p \leq \infty$.\\
 Dazu sei $(x_j)_{j=1}^\infty$ eine Cauchy-Folge in $l_p$ ($1 \leq p < \infty$) und $\epsilon >0$. Dann existiert ein $j_0(\epsilon)$, sodass für alle $j,l \geq j_0(\epsilon)$ gilt
 \begin{gather*}
-\left( \sum_{k=1}^\infty |\xi_k^j - \xi_k^l|^p \right)^{\frac{1}{p}} < \epsilon
+\left( \sum_{k=1}^\infty \abs{\xi_k^j - \xi_k^l}^p \right)^{\frac{1}{p}} < \epsilon
 \end{gather*}
-Für beliebiges $\delta > 0$ und $k \in \N$ ist damit $|\xi_k^j - \xi_k^l|<\delta$, für $j,l\geq j_1(\delta,k)$. Also bildet jede Komponente jeweils eine Cauchy-Folge $(\xi_k^j)_{j=1}^\infty$ in $\C$. Da $\C$ vollständig ist, existiert für jedes $k \in \N$ ein $\xi_k \in \C$ mit $\xi_k^j \nach \xi_k$. Man setzt $x:=(\xi_k)_{k=1}^\infty$. Mit obiger Ungleichung folgt für fixiertes $N \in \N$
+Für beliebiges $\delta > 0$ und $k \in \N$ ist damit $\abs{\xi_k^j - \xi_k^l}<\delta$, für $j,l\geq j_1(\delta,k)$. Also bildet jede Komponente jeweils eine Cauchy-Folge $(\xi_k^j)_{j=1}^\infty$ in $\C$. Da $\C$ vollständig ist, existiert für jedes $k \in \N$ ein $\xi_k \in \C$ mit $\xi_k^j \nach \xi_k$. Man setzt $x:=(\xi_k)_{k=1}^\infty$. Mit obiger Ungleichung folgt für fixiertes $N \in \N$
 \begin{align*}
-								                                  & \sum_{k=1}^N |\xi_k^j - \xi_k^l|^p < \widetilde{\epsilon}    & j,l \geq j_0(\widetilde{\epsilon})\\
-\stackrel{l \nach \infty}{\longrightarrow} \quad  & \sum_{k=1}^N |\xi_k^j - \xi_k|^p < \widetilde{\epsilon} 		 & j \geq j_0(\widetilde{\epsilon})\\
-\stackrel{N \nach \infty}{\longrightarrow} \quad  & \sum_{k=1}^\infty |\xi_k^j - \xi_k|^p < \widetilde{\epsilon} & j \geq j_0(\widetilde{\epsilon})
+								                                  & \sum_{k=1}^N \abs{\xi_k^j - \xi_k^l}^p < \widetilde{\epsilon}    & j,l \geq j_0(\widetilde{\epsilon})\\
+\stackrel{l \nach \infty}{\longrightarrow} \quad  & \sum_{k=1}^N \abs{\xi_k^j - \xi_k}^p < \widetilde{\epsilon} 		 & j \geq j_0(\widetilde{\epsilon})\\
+\stackrel{N \nach \infty}{\longrightarrow} \quad  & \sum_{k=1}^\infty \abs{\xi_k^j - \xi_k}^p < \widetilde{\epsilon} & j \geq j_0(\widetilde{\epsilon})
 \end{align*}
 Damit konvergiert die Folge $(x_j)_{j=1}^\infty$ gegen $x$ in $l_p$. Dass $x=(\xi_k)_{k=1}^\infty$ selbst in $l_p$ liegt zeigt folgende Abschätzung mithilfe der Minkowski'schen Ungleichung:
 \begin{gather*}
-\sum_{k=1}^\infty |\xi_k|^p = \sum_{k=1}^\infty |\xi_k - \xi_k^j + \xi_k^j|^p \leq \sum_{k=1}^\infty |\xi_k - \xi_k^j|^p + \sum_{k=1}^\infty |\xi_k^j|^p < \infty
+\sum_{k=1}^\infty \abs{\xi_k}^p = \sum_{k=1}^\infty \abs{\xi_k - \xi_k^j + \xi_k^j}^p \leq \sum_{k=1}^\infty \abs{\xi_k - \xi_k^j}^p + \sum_{k=1}^\infty \abs{\xi_k^j}^p < \infty
 \end{gather*}
 Die Vollständigkeit von $l_{\infty}$ kann wie folgt nachgewiesen werden:\\
-Sei $(x_j)_{j=1}^{\infty} \subset l_\infty$ eine beliebige Cauchy-Folge. Dann existiert für jedes $\epsilon > 0$ ein $j_1(\epsilon)$, sodass für alle $j,l \geq j_1(\epsilon)$ gilt $\sup_k |\xi_k^{(j)} - \xi_k^{(l)}| = d_\infty(x_j,x_l)<\epsilon$. Daher ist für jedes $k$ die Folge $(\xi_k^{(j)})_{j=1}^{\infty}$ eine Cauchy-Folge in $\R$ bzw. $\C$. Da diese Räume vollständig sind, existiert für jedes $k$ ein $\xi_k$ mit $\xi_k^{(j)} \nach \xi_k$ für $j \nach \infty$. Bezeichne nun $x:=(\xi_k)_{k=1}^{\infty}$ und zeige, dass $d_\infty(x_j,x) \nach 0$ gilt.
+Sei $(x_j)_{j=1}^{\infty} \subset l_\infty$ eine beliebige Cauchy-Folge. Dann existiert für jedes $\epsilon > 0$ ein $j_1(\epsilon)$, sodass für alle $j,l \geq j_1(\epsilon)$ gilt $\sup_k \abs{\xi_k^{(j)} - \xi_k^{(l)}} = d_\infty(x_j,x_l)<\epsilon$. Daher ist für jedes $k$ die Folge $(\xi_k^{(j)})_{j=1}^{\infty}$ eine Cauchy-Folge in $\R$ bzw. $\C$. Da diese Räume vollständig sind, existiert für jedes $k$ ein $\xi_k$ mit $\xi_k^{(j)} \nach \xi_k$ für $j \nach \infty$. Bezeichne nun $x:=(\xi_k)_{k=1}^{\infty}$ und zeige, dass $d_\infty(x_j,x) \nach 0$ gilt.
 \begin{align*}
-|\xi_k^{(j)}-\xi_k| & \leq |\xi_k^{(j)}-\xi_k^{(l)}| + |\xi_k^{(l)}-\xi_k| \\
+\abs{\xi_k^{(j)}-\xi_k} & \leq \abs{\xi_k^{(j)}-\xi_k^{(l)}} + \abs{\xi_k^{(l)}-\xi_k} \\
                     & \leq d_\infty(x_j,x_l) + \frac{\epsilon}{2}, \text{ für } l \geq l_0(\frac{\epsilon}{2}, k) \\
                     & \leq \frac{\epsilon}{2} + \frac{\epsilon}{2} = \epsilon, \text{ für } j,l \geq j_1(\frac{\epsilon}{2})
 \end{align*}
-Damit ist für alle $k$: $|\xi_k^{(j)}-\xi_k| < \epsilon$, für $j \geq j_1(\frac{\epsilon}{2})$, denn es werden nur Bedingungen an $j$ gestellt. Also gilt $\sup_k |\xi_k^{(j)}-\xi_k| \leq \epsilon$, für $j \geq j_1(\frac{\epsilon}{2})$. Also ist $l_\infty$ ein vollständiger metrischer Raum.\\
+Damit ist für alle $k$: $\abs{\xi_k^{(j)}-\xi_k} < \epsilon$, für $j \geq j_1(\frac{\epsilon}{2})$, denn es werden nur Bedingungen an $j$ gestellt. Also gilt $\sup_k \abs{\xi_k^{(j)}-\xi_k} \leq \epsilon$, für $j \geq j_1(\frac{\epsilon}{2})$. Also ist $l_\infty$ ein vollständiger metrischer Raum.\\
 \\
-(iv) Der Raum $C([a,b])$ ist vollständig bezüglich der Supremumsmetrik, d.h. bzgl. $d_{\infty}(f,g)= \sup_{x \in [a,b]} |f(x)-g(x)|$, aber unvollständig bezüglich der $d_1$-Metrik. Betrachte dazu die Folge $(f_j)_{j=1}^{\infty}$ mit
+(iv) Der Raum $C([a,b])$ ist vollständig bezüglich der Supremumsmetrik, d.h. bzgl. $d_{\infty}(f,g)= \sup_{x \in [a,b]} \abs{f(x)-g(x)}$, aber unvollständig bezüglich der $d_1$-Metrik. Betrachte dazu die Folge $(f_j)_{j=1}^{\infty}$ mit
 \begin{gather*}
 f_j(x):=
 \begin{cases}
@@ -324,7 +324,7 @@ f_j(x):=
 1, & \frac{1}{j} \leq x \leq 1
 \end{cases}
 \end{gather*}
-welche eine nicht in $C([-1,1])$ konvergente Cauchy-Folge bzgl. $d_1$ darstellt (denn es ist $d_1(f_j,f_k) < \max(\frac{1}{k},\frac{1}{j})<\epsilon$ für $k,j \geq j_1(\epsilon)$). Bezüglich $d_{\infty}$ ist $(f_j)_{j=1}^{\infty}$ nicht mal eine Cauchy-Folge, denn es ist $\sup_{x \in [-1,1]} |f_j(x)-f_k(x)|=\frac{1-\frac{j}{k}}{2}$ (o.B.d.A $j<k$).
+welche eine nicht in $C([-1,1])$ konvergente Cauchy-Folge bzgl. $d_1$ darstellt (denn es ist $d_1(f_j,f_k) < \max(\frac{1}{k},\frac{1}{j})<\epsilon$ für $k,j \geq j_1(\epsilon)$). Bezüglich $d_{\infty}$ ist $(f_j)_{j=1}^{\infty}$ nicht mal eine Cauchy-Folge, denn es ist $\sup_{x \in [-1,1]} \abs{f_j(x)-f_k(x)}=\frac{1-\frac{j}{k}}{2}$ (o.B.d.A $j<k$).
 \end{bsp}
 \medskip
 
@@ -334,9 +334,9 @@ Verschiedene Metriken auf einer Menge $X$ können zwar die gleiche Topologie aber
 \medskip
 
 \begin{bsp}
-(i) $X=\R$ mit den Metriken $d_{|\cdot|}(x,y)=|x-y|$ und $d_{arc}=|\arctan(x)-\arctan(y)|$. Wie in Übungsserie 1 gezeigt stimmen hier die Systeme der offenen Mengen überein, das heißt es wird die gleiche Topologie induziert. In $(\R,|\cdot|)$ konvergiert jede Cauchy-Folge, daher ist dieser Raum vollständig. In $(\R,d_{arc})$ ist aber beispielsweise die Folge $x_j=j$ eine Cauchy-Folge (in $(\R,|\cdot|)$ nicht!) ohne Grenzwert in $\R$, daher ist $(\R,d_{arc})$ nicht vollständig.\\
+(i) $X=\R$ mit den Metriken $d_{\abs{\cdot}}(x,y)=\abs{x-y}$ und $d_{arc}=\abs{\arctan(x)-\arctan(y)}$. Wie in Übungsserie 1 gezeigt stimmen hier die Systeme der offenen Mengen überein, das heißt es wird die gleiche Topologie induziert. In $(\R,\abs{\cdot})$ konvergiert jede Cauchy-Folge, daher ist dieser Raum vollständig. In $(\R,d_{arc})$ ist aber beispielsweise die Folge $x_j=j$ eine Cauchy-Folge (in $(\R,\abs{\cdot})$ nicht!) ohne Grenzwert in $\R$, daher ist $(\R,d_{arc})$ nicht vollständig.\\
 \\
-(ii) Wähle $X:=\{ \frac{1}{n+1} \sep n \in \N \}$ zusammen mit $d_{|\cdot|}$. Die Cauchy-Folge $x_j:=\frac{1}{j+1}$ liegt zwar in $X$, konvergiert dort aber nicht, denn $0 \neq X$. Daher ist $(X, d_{|\cdot|})$ unvollständig. Zusammen mit der diskreten Metrik ist die Folge jedoch keine Cauchy-Folge, denn bei dieser Metrik müssen Folgen ab einer gewissen Stelle konstant sein, um Cauchy-Folge zu sein. Diese sind dann sicher konvergent, daher ist $(X, d_{dis})$ vollständig. Die erzeugte Topologie der beiden Räume ist allerdings die gleiche.
+(ii) Wähle $X:=\{ \frac{1}{n+1} \sep n \in \N \}$ zusammen mit $d_{\abs{\cdot}}$. Die Cauchy-Folge $x_j:=\frac{1}{j+1}$ liegt zwar in $X$, konvergiert dort aber nicht, denn $0 \neq X$. Daher ist $(X, d_{\abs{\cdot}})$ unvollständig. Zusammen mit der diskreten Metrik ist die Folge jedoch keine Cauchy-Folge, denn bei dieser Metrik müssen Folgen ab einer gewissen Stelle konstant sein, um Cauchy-Folge zu sein. Diese sind dann sicher konvergent, daher ist $(X, d_{dis})$ vollständig. Die erzeugte Topologie der beiden Räume ist allerdings die gleiche.
 \end{bsp}
 \medskip
 
@@ -407,7 +407,7 @@ Sei $(X,d)$ ein metrischer Raum und $M \subset X$ eine beliebige Teilmenge.\\
 \medskip
 
 \begin{bsp}
-Wähle $(X,d)=(\R,|\cdot|)$ und $M=(a,b]$, dann ist $M$ nicht (folgen-) kompakt, aber (folgen-) präkompakt.
+Wähle $(X,d)=(\R,\abs{\cdot})$ und $M=(a,b]$, dann ist $M$ nicht (folgen-) kompakt, aber (folgen-) präkompakt.
 \end{bsp}
 \medskip
 
