--- a/leopold-hoehere-ana/abschnitt23.tex
+++ b/leopold-hoehere-ana/abschnitt23.tex
@@ -51,14 +51,14 @@ Damit ist die Menge aller linearen Operatoren von $X_1$ nach $X_2$ wieder ein li
 \mathcal{A}:=(\alpha_{j,k})_{j,k=1}^{\infty} \text{ mit } \eta_j = \sum_{k=1}^{\infty} \alpha_{j,k} \xi_k \quad \forall j \in \N
 \end{gather*}
 so ist dies in der Regel nur sinnvoll, wenn man weitere Forderungen stellt.\\
-Gilt $\sum_{j,k=1}^{\infty} |\alpha_{j,k}| < \infty$ so folgt $A \colon l_\infty \nach l_1$, denn es gilt
+Gilt $\sum_{j,k=1}^{\infty} \abs{\alpha_{j,k}} < \infty$ so folgt $A \colon l_\infty \nach l_1$, denn es gilt
 \begin{align*}
-\norm{Ax | l_1} & = \sum_{j=1}^{\infty} |\eta_j| = \sum_{j=1}^{\infty} | \sum_{k=1}^{\infty} \alpha_{j,k} \xi_k | \leq \sum_{j=1}^{\infty} \sum_{k=1}^{\infty} | \alpha_{j,k}| \cdot | \xi_k | \\
-                & \leq \sup_k | \xi_k | \sum_{j,k=1}^{\infty} | \alpha_{j,k} | = \norm{x | l_\infty} \cdot \sum_{j,k=1}^{\infty} | \alpha_{j,k} | < \infty \text{ nach Vorraussetzung}.
+\norm{Ax | l_1} & = \sum_{j=1}^{\infty} \abs{\eta_j} = \sum_{j=1}^{\infty} \abs{\sum_{k=1}^{\infty} \alpha_{j,k} \xi_k } \leq \sum_{j=1}^{\infty} \sum_{k=1}^{\infty} \abs{\alpha_{j,k}} \cdot \abs{\xi_k } \\
+                & \leq \sup_k \abs{\xi_k } \sum_{j,k=1}^{\infty} \abs{\alpha_{j,k} } = \norm{x | l_\infty} \cdot \sum_{j,k=1}^{\infty} \abs{\alpha_{j,k} } < \infty \text{ nach Vorraussetzung}.
 \end{align*}
-Ist $\sum_{j,k=1}^{\infty} |\alpha_{j,k}|^2 < \infty$, so hat man $A \colon l_2 \nach l_2$.\\
+Ist $\sum_{j,k=1}^{\infty} \abs{\alpha_{j,k}}^2 < \infty$, so hat man $A \colon l_2 \nach l_2$.\\
 \\
-Oder gilt $\sup_j \left( \sum_{k=1}^{\infty} | \alpha_{j,k} | \right) < \infty$, so folgt $A \colon l_\infty \nach l_\infty$.\\
+Oder gilt $\sup_j \left( \sum_{k=1}^{\infty} \abs{\alpha_{j,k} } \right) < \infty$, so folgt $A \colon l_\infty \nach l_\infty$.\\
 \\
 Desweiteren kann man als Spezialfall Diagonaloperatoren an Stelle unendlicher Matrizen betrachten. Dann bildet der Operator $D$, charakterisiert durch $d=(\delta_k)_{k=1}^{\infty}$ immernoch Folgen auf Folgen ab. Und zwar setzt man
 \begin{gather*}
@@ -66,7 +66,7 @@ D \colon s \nach s \text{ mit } y = Dx = (\delta_1 \xi_1, \delta_2 \xi_2, \ldots
 \end{gather*}
 Das heißt man hat in obiger Summe immer nur einen Summanden: $\forall j \in \N: \eta_j = \delta_j \xi_j$. Offensichtlich ist $D$ ein linearer Operator. Wählt man $d$ nun geschickt, so ergeben sich gewisse Eigenschaften.\\
 Für $d \in l_\infty$ gilt $D \colon l_p \nach l_p$, für $1 \leq p \leq \infty$ und wegen $l_p \subset l_q \gdw p \leq q$ (vergleiche dazu Übungsserie 5) gilt sogar $D \colon l_p \nach l_q$, mit $1 \leq p \leq q$.\\\\
-Ist $d \in l_1$, so gilt $D \colon l_\infty \nach l_1$. Dies soll hier einmal exemplarisch bewiesen werden: $\norm{Dx | l_1} = \sum_{k=1}^{\infty} |\delta_k \xi_k | \leq \sup_{k} |\xi_k| \sum_{k=1}^{\infty} |\delta_k| = \norm{x | l_\infty} \cdot \norm{d | l_1}$.\\\\
+Ist $d \in l_1$, so gilt $D \colon l_\infty \nach l_1$. Dies soll hier einmal exemplarisch bewiesen werden: $\norm{Dx | l_1} = \sum_{k=1}^{\infty} \abs{\delta_k \xi_k } \leq \sup_{k} \abs{\xi_k} \sum_{k=1}^{\infty} \abs{\delta_k} = \norm{x | l_\infty} \cdot \norm{d | l_1}$.\\\\
 Für $d \in l_r$ mit $0 < \frac{1}{r} = \frac{1}{q} - \frac{1}{p} < 1$ hat man $D \colon l_p \nach l_q$ für $1 < p < q < \infty$.\\\\
 (iii) Folgende Operatoren arbeiten auf den stetigen Funktionen $C([a,b])$ und sind alle offensichtlich linear:\\
 Der Integraloperator ordnet jeder stetigen Funktion eine Stammfunktion mit $(Tf)(a)=0$ zu:
@@ -154,15 +154,15 @@ $\norm{T}$ ist also die kleinst mögliche Konstante in der Ungleichung $\norm{Tx}
 \begin{bsp}
 Alle bisherigen Beispiele sind nicht nur linear sondern auch beschränkt.\\
 Insbesondere gilt für den Diagonaloperator $D \colon l_\infty \nach l_1$ mit $Dx=(d_1 \xi_1, d_2 \xi_2, \ldots)$ das Folgende: $\norm{Dx \sep l_1} \leq \ldots \leq \norm{x \sep l_\infty} \cdot \norm{d \sep l_1}$. Damit ist stets
-$\norm{D \sep \L(l_\infty, l_1)} \leq \norm{d \sep l_1}$. Wählt man im Speziellen $x^*=(1,1,\ldots)$. Dann ist $\norm{x^* \sep l_\infty} = \sup_{k} |\xi_k^*|=1$. Also folgt $\norm{Dx^* \sep l_1}=\norm{(d_1,d_2,\ldots) \sep l_1}=\norm{d \sep l_1}$. Daher gilt insbesondere für die Norm des Operators $\norm{D}=\norm{D \sep \L(l_\infty)}=\sup_{\norm{x \sep l_\infty}=1} \norm{Dx \sep l_\infty} \geq \norm{d \sep l_1}$. Aus den beiden Ungleichungen ergibt sich also zusammenfassend $\norm{D} = \norm{d \sep l_1}$.
+$\norm{D \sep \L(l_\infty, l_1)} \leq \norm{d \sep l_1}$. Wählt man im Speziellen $x^*=(1,1,\ldots)$. Dann ist $\norm{x^* \sep l_\infty} = \sup_{k} \abs{\xi_k^*}=1$. Also folgt $\norm{Dx^* \sep l_1}=\norm{(d_1,d_2,\ldots) \sep l_1}=\norm{d \sep l_1}$. Daher gilt insbesondere für die Norm des Operators $\norm{D}=\norm{D \sep \L(l_\infty)}=\sup_{\norm{x \sep l_\infty}=1} \norm{Dx \sep l_\infty} \geq \norm{d \sep l_1}$. Aus den beiden Ungleichungen ergibt sich also zusammenfassend $\norm{D} = \norm{d \sep l_1}$.
 \end{bsp}
 \medskip
 
 \begin{bsp}[für unbeschränkte lineare Operatoren]
 (i) Sei $M:=\{ f \sep f,f' \in C([a,b])\} \subset C([a,b])$ ein linearer Teilraum des Raumes der stetigen Funktionen (eigentlich ist $M=C^1([a,b])$).\\
-Betrachte den Differentialoperator $\frac{d}{dt} \colon M \nach C([a,b]), f \mapsto f'$ und wähle auf $M$ die übliche Supremumsnorm der stetigen Funktionen $\norm{f | M} := \norm{f | C([a,b])} = \sup_{t \in [a,b]} |f(t)|$. Dieser Operator ist offenbar linear.\\
-Wähle nun die speziellen Funktionen $f_n(t):=\left( \frac{t-a}{b-a} \right)^n$. Dann ist $\frac{d}{dt} f_n = n \frac{(t-a)^{n-1}}{(b-a)^n}$ und daher gilt $\norm{\frac{d}{dt}f_n | C([a,b])}= \sup_{t \in [a,b]} |\frac{d}{dt}f_n(t)| = \frac{n}{b-a}$. \\
-Weiter ist $\norm{f_n | M}=\sup_{t \in [a,b]} |\left( \frac{t-a}{b-a} \right)^n|=1$. Es kann also keine Konstante $c$ exisiteren, sodass für alle $n \in \N$ gilt $\norm{\frac{d}{dt}f_n|C([a,b])}=\frac{n}{b-a} \leq c \norm{f_n | M} = c$.\\
+Betrachte den Differentialoperator $\frac{d}{dt} \colon M \nach C([a,b]), f \mapsto f'$ und wähle auf $M$ die übliche Supremumsnorm der stetigen Funktionen $\norm{f | M} := \norm{f | C([a,b])} = \sup_{t \in [a,b]} \abs{f(t)}$. Dieser Operator ist offenbar linear.\\
+Wähle nun die speziellen Funktionen $f_n(t):=\left( \frac{t-a}{b-a} \right)^n$. Dann ist $\frac{d}{dt} f_n = n \frac{(t-a)^{n-1}}{(b-a)^n}$ und daher gilt $\norm{\frac{d}{dt}f_n | C([a,b])}= \sup_{t \in [a,b]} \abs{\frac{d}{dt}f_n(t)} = \frac{n}{b-a}$. \\
+Weiter ist $\norm{f_n | M}=\sup_{t \in [a,b]} \abs{\left( \frac{t-a}{b-a} \right)^n}=1$. Es kann also keine Konstante $c$ exisiteren, sodass für alle $n \in \N$ gilt $\norm{\frac{d}{dt}f_n|C([a,b])}=\frac{n}{b-a} \leq c \norm{f_n | M} = c$.\\
 Damit ist der Differentialoperator auf $(M, \norm{\cdot}_\infty)$ nicht beschränkt. Der Ausweg ist eine andere Norm auf $M$ zu wählen: $\norm{f | M}:=\norm{f | C^1([a,b])} = \norm{f | C([a,b])} + \norm{f' | C([a,b])}$. Dies ist die Standardnorm auf $C^1([a,b])$, welche auch die Bezeichnung impliziert.\\
 Wie bereits im Beispiel 10 in Abschnitt 2.1 gezeigt, ist $\frac{d}{dt} \colon C^1([a,b]) \nach C([a,b])$ ein beschränkter linearer Operator.\\
 \\
@@ -263,7 +263,7 @@ Für $T \in \L(X,Y)$ und $Tx=y$ stellen sich also folgende Fragen:\\
 Sei $p$ eine fixierte stetige Funktion und der Operator $P(D) \colon C^1([a,b]) \nach C([a,b])$ definiert durch $(P(D)x)(t):=x'(t)+p(t)x(t)$, für $x \in C^1([a,b])$. Zu beachten ist dabei die Norm $\norm{f | C^1([a,b])}:=\norm{f | C([a,b])}+\norm{f' | C([a,b])}$.\\
 Dann ist $P(D)x=y \gdw x'(t)+p(t)x(t)=y(t)$ für $t \in [a,b]$ eine gewöhnliche, lineare Differentialgleichung erster Ordnung. Aussagen über Lösbarkeit und Eindeutigkeit liefert der Satz von Piccard-Lindelöff. Könnte man den Operator invertieren, wäre die Lösung unmittelbar ablesbar.\\
 Erweiterung auf partielle Differentialgleichungen:\\
-$P(D):=\sum_{|\alpha| \leq m} a_\alpha D^\alpha$ definiert einen allgemeinen Differentialoperator $m$-ter Ordnung.
+$P(D):=\sum_{\abs{\alpha} \leq m} a_\alpha D^\alpha$ definiert einen allgemeinen Differentialoperator $m$-ter Ordnung.
 \end{bsp}
 \medskip
 
