--- a/leopold-hoehere-ana/abschnitt31.tex
+++ b/leopold-hoehere-ana/abschnitt31.tex
@@ -60,7 +60,7 @@ Durch die vom Skalarprodukt \highl[Skalarprodukt!induzierte Norm]{induzierte Nor
 \begin{lemma}[Cauchy-Schwarz'sche Ungleichung]\index{Lemma!Cauchy-Schwarz'sche Ungleichung}\index{Ungleichung!von Cauchy-Schwarz|see{Lemma}}
 Sei $H$ ein normierter Raum, $x,y \in H$ und $\norm{\cdot}=\sqrt{(\cdot,\cdot)}$. Dann gilt stets
 \begin{gather*}
-|(x,y)| \leq \norm{x} \cdot \norm{y}.
+\abs{(x,y)} \leq \norm{x} \cdot \norm{y}.
 \end{gather*}
 Gleichheit gilt nur für ($x=0$ oder $y=0$ oder) $x=\lambda y$ mit $\lambda \in \C$.
 \end{lemma}
@@ -99,13 +99,13 @@ Siehe Vorlesung.
 \\
 (iii) $H:=l_2$ ist Hilbertraum mit \highl[Skalarprodukt!in $l_2$]{$(x,y)$} $:= \sum_{k=1}^{\infty} \xi_k \overline{\eta_k}$, für $x:=(\xi_k)_{k=1}^{\infty}, y:=(\eta_k)_{k=1}^{\infty} \in H$, das ist sinnvoll, da nach der Hölder'schen Ungleichung gilt:
 \begin{gather*}
-|\sum_{k=1}^{\infty} \xi_k \overline{\eta_k}| \leq \left( \sum_{k=1}^{\infty} |\xi_k|^2 \right)^{\frac{1}{2}} \left( \sum_{k=1}^{\infty} |\overline{\eta_k}|^2 \right)^{\frac{1}{2}}
+\abs{\sum_{k=1}^{\infty} \xi_k \overline{\eta_k}} \leq \left( \sum_{k=1}^{\infty} \abs{\xi_k}^2 \right)^{\frac{1}{2}} \left( \sum_{k=1}^{\infty} \abs{\overline{\eta_k}}^2 \right)^{\frac{1}{2}}
 \end{gather*}
-Die Norm sieht dann so aus: $\norm{x} = \left( \sum_{k=1}^{\infty} \xi_k \overline{\xi_k} \right)^\frac{1}{2} = \left( \sum_{k=1}^{\infty} |\xi_k|^2 \right)^\frac{1}{2}$ und $l_2$ ist damit vollständig.\\
+Die Norm sieht dann so aus: $\norm{x} = \left( \sum_{k=1}^{\infty} \xi_k \overline{\xi_k} \right)^\frac{1}{2} = \left( \sum_{k=1}^{\infty} \abs{\xi_k}^2 \right)^\frac{1}{2}$ und $l_2$ ist damit vollständig.\\
 \\
 (iv) Für $\Omega \subset \R^n$ ist $L_2(\Omega)$ (Äquivalenzklassen quadratisch integrierbarer Funktionen von $\Omega$ nach $\R$, die sich nur auf Nullmengen unterscheiden) ein Hilbertraum mit der Norm
 \begin{gather*}
-\norm{f \sep L_2(\Omega)}=\left( \int_\Omega |f(x)|^2 \, d\mu(x) \right)^{\frac{1}{2}}
+\norm{f \sep L_2(\Omega)}=\left( \int_\Omega \abs{f(x)}^2 \, d\mu(x) \right)^{\frac{1}{2}}
 \end{gather*}
 und folgendem Skalarprodukt:
 \begin{gather*}
