--- a/leopold-hoehere-ana/abschnitt34.tex
+++ b/leopold-hoehere-ana/abschnitt34.tex
@@ -25,16 +25,16 @@ Aus den Aussagen der Übungsserie 11 / Aufgabe 4 über die Neumann'sche Reihe (im 
 \begin{lemmas}
 Sei $H$ Banachraum und $T\in \L(H)$, dann gilt:
 \begin{align*}
-\text{(i) }   & \rho(T) \supset \{ \lambda \in \C \sep |\lambda| > \lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}} \} \\
-\text{(ii) }  & \sigma(T) \subset \{ \lambda \in \C \sep |\lambda| \leq \lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}} \} \\
+\text{(i) }   & \rho(T) \supset \{ \lambda \in \C \sep \abs{\lambda} > \lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}} \} \\
+\text{(ii) }  & \sigma(T) \subset \{ \lambda \in \C \sep \abs{\lambda} \leq \lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}} \} \\
 \text{(iii) } & \rho(T) \text{ ist offen und } \sigma(T) \text{ ist abgeschlossen in } \C
 \end{align*}
 \end{lemmas}
 \begin{proof}
-(i) Der Satz über die Neumann'sche Reihe (Satz 2.3.5) besagt, dass für $T\in \L(H)$ mit $\lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}}<1$ die Abbildung $(T-I_H)^{-1}$ existiert. Für ein beliebiges $\lambda \in \C\setminus \{ 0\}$ gilt $T-\lambda I_H = \lambda(\frac{T}{\lambda} -I_H)$. Damit existiert $(T-\lambda I_H)^{-1}$ \gdw $(\frac{T}{\lambda} -I_H)^{-1}$ existiert, also falls $\lim_{n\nach \infty} \norm{\left(\frac{T}{\lambda} \right)^n}^{\frac{1}{n}}<1$, bzw. $\lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}}<|\lambda|$ gilt. Dann ist $\lambda \in \rho(T)$.\\
+(i) Der Satz über die Neumann'sche Reihe (Satz 2.3.5) besagt, dass für $T\in \L(H)$ mit $\lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}}<1$ die Abbildung $(T-I_H)^{-1}$ existiert. Für ein beliebiges $\lambda \in \C\setminus \{ 0\}$ gilt $T-\lambda I_H = \lambda(\frac{T}{\lambda} -I_H)$. Damit existiert $(T-\lambda I_H)^{-1}$ \gdw $(\frac{T}{\lambda} -I_H)^{-1}$ existiert, also falls $\lim_{n\nach \infty} \norm{\left(\frac{T}{\lambda} \right)^n}^{\frac{1}{n}}<1$, bzw. $\lim_{n\nach \infty} \norm{T^n}^{\frac{1}{n}}<\abs{\lambda}$ gilt. Dann ist $\lambda \in \rho(T)$.\\
 (ii) Folgt unmittelbar aus (i) und der Definition des Spektrums.\\
 (iii) In Übungsserie 11 / Aufgabe 4b wurde gezeigt, dass für $S,S_1\in \L(H)$ mit $S_1$ invertierbar und $\norm{S-S_1}<\norm{S_1^{-1}}^{-1}$ folgt, dass auch $S$ invertierbar ist. \\
-Für $S_1:=T-\lambda I_H$ invertierbar, d.h. $\lambda \in \rho(T)$ und $S:=T-\widetilde{\lambda} I_H$ mit $\widetilde{\lambda}$ nahe bei $\lambda$ gilt $\norm{S_1-S}=\norm{(T-\lambda I_H) - (T-\widetilde{\lambda} I_H)} = \norm{(\widetilde{\lambda} - \lambda) I_H} = |\widetilde{\lambda} - \lambda| \leq \norm{S_1^{-1}}^{-1}$. Dann ist auch $S=T-\widetilde{\lambda} I_H$ invertierbar, d.h. $\widetilde{\lambda} \in \rho(T)$. Zu jedem $\lambda \in \rho(T)$ gehört also auch eine Kugel $K_\epsilon(\lambda)$ zu $\rho(T)$. Damit ist $\rho(T)$ offen und dementsprechend $\sigma(T)$ abgeschlossen in $\C$.
+Für $S_1:=T-\lambda I_H$ invertierbar, d.h. $\lambda \in \rho(T)$ und $S:=T-\widetilde{\lambda} I_H$ mit $\widetilde{\lambda}$ nahe bei $\lambda$ gilt $\norm{S_1-S}=\norm{(T-\lambda I_H) - (T-\widetilde{\lambda} I_H)} = \norm{(\widetilde{\lambda} - \lambda) I_H} = \abs{\widetilde{\lambda} - \lambda} \leq \norm{S_1^{-1}}^{-1}$. Dann ist auch $S=T-\widetilde{\lambda} I_H$ invertierbar, d.h. $\widetilde{\lambda} \in \rho(T)$. Zu jedem $\lambda \in \rho(T)$ gehört also auch eine Kugel $K_\epsilon(\lambda)$ zu $\rho(T)$. Damit ist $\rho(T)$ offen und dementsprechend $\sigma(T)$ abgeschlossen in $\C$.
 \end{proof}
 \medskip
 
@@ -131,7 +131,7 @@ Wann gilt $(D-\lambda I_H)x=((\delta_1 - \lambda)\xi_1,(\delta_2 - \lambda)\xi_2
 Ein extremes Beispiel ist die Wahl des Diagonaloperators $D_e$ definiert durch $(\delta_k)_{k=1}^{\infty}$, wobei $[0,1]\cap\Q = \{ \delta_1, \delta_2,\ldots \}$ (da $\Q$ abzählbar). Dann ist $(\delta_k)_{k=1}^{\infty} \in l_\infty$, denn es gilt $0 \leq \delta_k \leq 1$ für $k \in \N$. Es folgt $\sigma_p(D_e)=[0,1]\cap\Q$. Man weiß, dass $\sigma_p(D_e) \subset \sigma(D_e)$ ist und $\sigma(D_e)$ muss abgeschlossen sein. Daher ist auch $\overline{\sigma_p(D_e)} = [0,1] \subset \sigma(D_e)$. Es gilt sogar $\sigma(D_e)=[0,1]$, denn es ist $m_{D_e}=\inf_{\norm{x}=1} (D_e x,x)=\inf_{\norm{x}=1} \sum_{k=1}^{\infty} \delta_k \xi_k \xi_k \geq \inf_{\norm{x}=1} \inf_{k\in \N} \delta_k \norm{x} = 0$ und analog $M_{D_e} \leq 1$ und mit Satz 3.4.2 folgt damit $\sigma(D_e) \subset [0,1]$.\\
 \\
 (iii) Betrachte den Multiplikationsoperator $T \colon L_2([0,1]) \nach L_2([0,1])$ definiert durch $(Tf)(t):=t \cdot f(t)$. Offensichtlich ist $T$ selbstadjungiert, denn für $f,g \in L_2([0,1])$ gilt $(Tf,g) = \int_0^1 (Tf)(t) \overline{g(t)} dt = \int_0^1 t \cdot f(t) \overline{g(t)} dt = \int_0^1 f(t) \overline{t \cdot g(t)} dt = (f,Tg)$.\\
-Es gilt $m_T = \inf_{\norm{f}=1} (Tf,f) = \inf_{\norm{f}=1} \int_0^1 t |f(t)|^2 dt \geq 0$ und analog auch $M_T \leq 1$.\\
+Es gilt $m_T = \inf_{\norm{f}=1} (Tf,f) = \inf_{\norm{f}=1} \int_0^1 t \abs{f(t)}^2 dt \geq 0$ und analog auch $M_T \leq 1$.\\
 Es folgt $\sigma(T) \subset [0,1]$. Ist $\lambda \in [0,1)$, so existiert $j_0 \in \N$ mit $\lambda + 2^{-j} \leq 1$ ($j\geq j_0$). Setze\\
 $f_j(t):=
 \begin{cases}
@@ -139,7 +139,7 @@ $f_j(t):=
 0, & \text{sonst}
 \end{cases}$ \\
 Damit ist $\norm{f_j \sep L_2}^2 = \int_\lambda^{\lambda + 2^{-j}} (2^{\frac{j}{2}})^2 dt = 2^j 2^{-j} = 1$ und es gilt ferner\\
-$\norm{(T-\lambda I_{L_2}) f_j} = \int_\lambda^{\lambda + 2^{-j}} | (t-\lambda) 2^{\frac{j}{2}}|^2 dt \nach 0$. Damit gilt mit der Folgerung nach Satz 3.4.1 $\lambda \in \sigma(T) \quad \forall \lambda \in [0,1]$. Sind diese $\lambda$ Eigenwerte? Dafür müsste gelten $(T-\lambda I_{L_2}) f(t) = (t-\lambda) f(t)=0$ fast überall, d.h. $f(t)=0$ fast überall. Es kann also keine Eigenwerte geben.
+$\norm{(T-\lambda I_{L_2}) f_j} = \int_\lambda^{\lambda + 2^{-j}} \abs{(t-\lambda) 2^{\frac{j}{2}}}^2 dt \nach 0$. Damit gilt mit der Folgerung nach Satz 3.4.1 $\lambda \in \sigma(T) \quad \forall \lambda \in [0,1]$. Sind diese $\lambda$ Eigenwerte? Dafür müsste gelten $(T-\lambda I_{L_2}) f(t) = (t-\lambda) f(t)=0$ fast überall, d.h. $f(t)=0$ fast überall. Es kann also keine Eigenwerte geben.
 \end{bsp}
 \medskip
 
@@ -163,7 +163,7 @@ Hat man verschiedene Eigenwerte $\lambda$ und $\mu$ von $T$ so sind die zugehöri
 
 \begin{satz}[Spektralsatz]\index{Satz!Spektralsatz}
 Sei $H$ ein Hilbertraum und $T\in \L(H)$ selbstadjungiert (allgemeiner: normal) und kompakt.\\
-Dann besitzt $T$ höchstens abzählbar unendlich viele von Null verschiedene (selbstadjungiert: reelle) Eigenwerte endlicher Vielfachheit. Diese bilden ihrer betragsmäßigen Größe und Vielfachheit nach geordnet $|\lambda_1| \geq |\lambda_2| \geq \ldots$ eine eventuell abbrechende Nullfolge.\\
+Dann besitzt $T$ höchstens abzählbar unendlich viele von Null verschiedene (selbstadjungiert: reelle) Eigenwerte endlicher Vielfachheit. Diese bilden ihrer betragsmäßigen Größe und Vielfachheit nach geordnet $\abs{\lambda_1} \geq \abs{\lambda_2} \geq \ldots$ eine eventuell abbrechende Nullfolge.\\
 Die zugehörigen Eigenelemente $e_j$ ($Te_j = \lambda_j e_j$) bilden bei entsprechender Auswahl ein Orthonormalsystem (ONS) $\{ e_j \sep j\in \N\}$, bzw. eine Orthonormalbasis (ONB) in $\overline{\im{T}}$, und es gilt
 \begin{gather*}
 H=\ker T \oplus \overline{\spn{e_j \sep j \in \N}}
@@ -253,7 +253,7 @@ Sei $\Omega \subset \R^n$ offen und beschränkt (d.h. $\exists L_2(\Omega)$) und 
 \begin{gather*}
 (\K f)(t):=\int_\Omega k(t,s) f(s) ds, \quad t \in \Omega
 \end{gather*}
-einen linearen, beschränkten und kompakten Operator $\K \colon L_2(\Omega) \nach L_2(\Omega)$ (vergleiche dazu auch Übungsserie 12 / Aufgabe 7, für $\Omega=(a,b)\subset \R^1$). Das bleibt auch richtig, wenn $k(t,s)$ schwach singulär ist, d.h. es gilt $k(t,s)= \frac{A(t,s)}{|t-s|^\alpha}$ mit $0\leq \alpha < n$ und $A(t,s)$ messbar und beschränkt (Polstelle auf der Diagonalen im Definitionsbereich). Ist $k$ symmetrisch ($k(t,s)=k(s,t)$, für $s,t\in \Omega$), so ist $\K$ ein normaler Operator. Gilt zusätzlich noch, dass $k$ reellwertig ist, so ist $\K$ sogar selbstadjungiert.\\
+einen linearen, beschränkten und kompakten Operator $\K \colon L_2(\Omega) \nach L_2(\Omega)$ (vergleiche dazu auch Übungsserie 12 / Aufgabe 7, für $\Omega=(a,b)\subset \R^1$). Das bleibt auch richtig, wenn $k(t,s)$ schwach singulär ist, d.h. es gilt $k(t,s)= \frac{A(t,s)}{\abs{t-s}^\alpha}$ mit $0\leq \alpha < n$ und $A(t,s)$ messbar und beschränkt (Polstelle auf der Diagonalen im Definitionsbereich). Ist $k$ symmetrisch ($k(t,s)=k(s,t)$, für $s,t\in \Omega$), so ist $\K$ ein normaler Operator. Gilt zusätzlich noch, dass $k$ reellwertig ist, so ist $\K$ sogar selbstadjungiert.\\
 Sei unter diesen Vorraussetzungen $\lambda \neq 0$ kein Eigenwert von $\K$, so besitzen die Fredholm'schen Integralgleichungen zweiter Art
 \begin{gather*}
 (\K - \lambda I_{L_2(\Omega)})f(t) = \int_\Omega k(t,s) f(s) ds - \lambda f(t) = h(t), \quad t \in \Omega
